Changes made at home merged in.

--- a/extra/scandoc/Mtemplate.html
+++ b/extra/scandoc/Mtemplate.html
@@ -7,7 +7,7 @@
 # package.
 # =========================================
 # For quick and superficial customization, simply change these variables
-$project_name = 'M';
+$project_name = 'Mahogany';
 $company_logo = '<img src="./images/M.jpg">';            # change this to an image tag.
 $copyright = '&copy 1999 Karsten Ball&uuml;der';
 $image_directory = "./images/";
