Numerous changes: subscription and folder listings, more async, bug fixes, mmodule lists

--- a/extra/scandoc/Mtemplate.html
+++ b/extra/scandoc/Mtemplate.html
@@ -8,10 +8,10 @@
 # =========================================
 # For quick and superficial customization, simply change these variables
 $project_name = 'Mahogany';
-$company_logo = '<img src="./images/M.jpg">';            # change this to an image tag.
+$company_logo = '<img src="Micon.jpg">';            # change this to an image tag.
 $copyright = '&copy 1999 Karsten Ball&uuml;der';
-$image_directory = "./images/";
-$index_background = $image_directory . "slate.jpg";
+$image_directory = "./";
+$index_background = $image_directory . "greytile.jpg";
 $page_background  = $image_directory . "greytile.jpg";
 $bullet1_image = $image_directory . "ball1.gif";
 $bullet2_image = $image_directory . "ball2.gif";
