Misc fixes, mainly wizards and setup.

--- a/src/gui/license.html
+++ b/src/gui/license.html
@@ -1,11 +1,12 @@
 "
 <H3>The Mahogany ``Artistic License''</H3>
 This is the license under which all original source code developed
-for <em>Mahogany</em> is licensed and distributed.<br>
-It is <i>not</i> our intend to restrict other developers
+for <em>Mahogany</em> is licensed and distributed.<p>
+<i>It is not our intend to restrict other developers
 in re-using our code and if you feel that you want to do something with
 the <em>Mahogany</em> source that this license may not permit, simply 
-get in touch with us.<br>
+      get in touch with us.</i>
+      <br>
 	<H4>Preamble</H4>
     The intent of this document is to state the conditions under which this
     software package may be copied, such that the Copyright Holder maintains
@@ -14,7 +15,7 @@ get in touch with us.<br>
     Package in a more-or-less customary fashion, plus the right to make reasonable
     modifications.
     <p>This license is based on Perl's ``Artistic
-      License'' and has been adapted to better suit <i>Mahogany</i>. It aims to confirm
+      License'' and has been adapted to better suit <i>Mahogany</i>. It aims to conform
       with the Open-Source specification.
       <br>
 	    <H4>Definitions</H4>
