Windows compilation fixes

--- a/src/gui/license.html
+++ b/src/gui/license.html
@@ -1,153 +1,151 @@
-"
-<H3>The Mahogany ``Artistic License''</H3>
-This is the license under which all original source code developed
-for <em>Mahogany</em> is licensed and distributed.<p>
-<i>It is not our intend to restrict other developers
-in re-using our code and if you feel that you want to do something with
-the <em>Mahogany</em> source that this license may not permit, simply 
-      get in touch with us.</i>
-      <br>
-	<H4>Preamble</H4>
-    The intent of this document is to state the conditions under which this
-    software package may be copied, such that the Copyright Holder maintains
-    some semblance of artistic control over the development of the package,
-    while giving the users of the package the right to use and distribute the
-    Package in a more-or-less customary fashion, plus the right to make reasonable
-    modifications.
-    <p>This license is based on Perl's ``Artistic
-      License'' and has been adapted to better suit <i>Mahogany</i>. It aims to conform
-      with the Open-Source specification.
-      <br>
-	    <H4>Definitions</H4>
-
-    <ul>
-      <li>
-	``Package'' refers to the collection of files distributed by the Copyright
-	Holder, and derivatives of that collection of files created through textual
-	modification.&nbsp;</li>
-    </ul>
-
-    <ul>
-      <li>
-	``Standard Version'' refers to such a Package if it has not been modified,
-	or has been modified in accordance with the wishes of the Copyright Holder
-	as specified below.&nbsp;</li>
-    </ul>
-
-    <ul>
-      <li>
-	``Copyright Holder'' is whoever is named in the copyright or copyrights
-	for the package.&nbsp;</li>
-
-      <li>
-	``You'' is you, if you're thinking about copying or distributing this Package.&nbsp;</li>
-    </ul>
-
-    <ul>
-      <li>
-	``Reasonable copying fee'' is whatever you can justify on the basis of
-	media cost, duplication charges, time of people involved, and so on. (You
-	will not be required to justify it to the Copyright Holder, but only to
-	the computing community at large as a market that must bear the fee.)&nbsp;</li>
-    </ul>
-
-    <ul>
-      <li>
-	``Freely Available'' means that no fee is charged for the item itself,
-	though there may be fees involved in handling the item. It also means that
-	recipients of the item may redistribute it under the same conditions they
-	received it.&nbsp;</li>
-    </ul>
-  </ul>
-
-      <H4>Terms and Conditions of Use</H4>
-
-    <ol>
-      <li>
-	You may make and give away verbatim copies of the source form of the Standard
-	Version of this Package without restriction, provided that you duplicate
-	all of the original copyright notices and associated disclaimers and only
-	distribute the complete package as a whole.&nbsp;</li>
-
-      <li>
-	You may apply bug fixes, portability fixes and other modifications derived
-	from the Public Domain or from the Copyright Holder. A Package modified
-	in such a way shall still be considered the Standard Version.&nbsp;</li>
-
-      <li>
-	You may otherwise modify your copy of this Package in any way, provided
-	that you insert a prominent notice in each changed file stating how and
-	when you changed that file, and provided that you do at least ONE of the
-	following:&nbsp;</li>
-
-    <ol TYPE=\"a\">
-      <li>
-	place your modifications in the Public Domain or otherwise make them Freely
-	Available, such as by posting said modifications to Usenet or an equivalent
-	medium, or placing the modifications on a major archive site such as sunsite.unc.edu,
-	or by allowing the Copyright Holder to include your modifications in the
-	Standard Version of the Package, <i>and</i> rename any non-standard executables
-	so the names do not conflict with standard executables, which must also
-	be provided, and provide a separate manual page for each non-standard executable
-	that clearly documents how it differs from the Standard Version. You must
-	<i>not</i>
-	make the modified version depend on any other software or libary if that
-	software or libary is not Freely Available or if it is covered under a
-	license more restrictive than this.&nbsp;</li>
-
-      <li>
-	use the modified Package only within your corporation or organization.&nbsp;</li>
-
-      <li>
-	make other distribution arrangements with the Copyright Holder.&nbsp;</li>
-    </ol>
-
-    <li>
-      You may distribute the programs of this Package in object code or executable
-      form, provided that you do at least ONE of the following:&nbsp;</li>
-
-    <ol TYPE=\"a\">
-      <li>
-	distribute a Standard Version of the executables and library files, together
-	with instructions (in the manual page or equivalent) on where to get the
-	Standard Version.&nbsp;</li>
-
-      <li>
-	accompany the distribution with the machine-readable source of the Package
-	with your modifications, including the complete machine-readable source
-	of the unmodified Standard Version. You must <i>not</i> make the modified
-	version depend on any other software or libary if that software or libary
-	is not Freely Available or if it is covered under a license more restrictive
-	than this.&nbsp;</li>
-
-      <li>
-	give non-standard executables non-standard names, and clearly document
-	the differences in manual pages (or equivalent), together with instructions
-	on where to get the Standard Version.&nbsp;</li>
-
-      <li>
-	make other distribution arrangements with the Copyright Holder.&nbsp;</li>
-    </ol>
-
-    <li>
-      You may charge a reasonable copying fee for any distribution of this Package.
-      You may charge any fee you choose for support of this Package. You may
-      not charge a fee for this Package itself. However, you may distribute this
-      Package in aggregate with other (possibly commercial) programs as part
-      of a larger (possibly commercial) software distribution provided that you
-      do not advertise this Package as a product of your own.&nbsp;</li>
-
-    <li>
-      The name of the Copyright Holder may not be used to endorse or promote
-      products derived from this software without specific prior written permission.
-      However, all products derived from this software must reproduce the original
-      copyright notice as found in the Standard Version.&nbsp;</li>
-
-    <li>
-      THIS PACKAGE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR IMPLIED WARRANTIES,
-      INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF MERCHANTIBILITY
-      AND FITNESS FOR A PARTICULAR PURPOSE.&nbsp;</li>
-  </ol>
-    <center>The End&nbsp;</center>
-  </ul>
-"
+"<H3>The Mahogany ``Artistic License''</H3>"
+"This is the license under which all original source code developed"
+"for <em>Mahogany</em> is licensed and distributed.<p>"
+"<i>It is not our intend to restrict other developers"
+"in re-using our code and if you feel that you want to do something with"
+"the <em>Mahogany</em> source that this license may not permit, simply "
+"      get in touch with us.</i>"
+"      <br>"
+"	<H4>Preamble</H4>"
+"    The intent of this document is to state the conditions under which this"
+"    software package may be copied, such that the Copyright Holder maintains"
+"    some semblance of artistic control over the development of the package,"
+"    while giving the users of the package the right to use and distribute the"
+"    Package in a more-or-less customary fashion, plus the right to make reasonable"
+"    modifications."
+"    <p>This license is based on Perl's ``Artistic"
+"      License'' and has been adapted to better suit <i>Mahogany</i>. It aims to conform"
+"      with the Open-Source specification."
+"      <br>"
+"	    <H4>Definitions</H4>"
+""
+"    <ul>"
+"      <li>"
+"	``Package'' refers to the collection of files distributed by the Copyright"
+"	Holder, and derivatives of that collection of files created through textual"
+"	modification.&nbsp;</li>"
+"    </ul>"
+""
+"    <ul>"
+"      <li>"
+"	``Standard Version'' refers to such a Package if it has not been modified,"
+"	or has been modified in accordance with the wishes of the Copyright Holder"
+"	as specified below.&nbsp;</li>"
+"    </ul>"
+""
+"    <ul>"
+"      <li>"
+"	``Copyright Holder'' is whoever is named in the copyright or copyrights"
+"	for the package.&nbsp;</li>"
+""
+"      <li>"
+"	``You'' is you, if you're thinking about copying or distributing this Package.&nbsp;</li>"
+"    </ul>"
+""
+"    <ul>"
+"      <li>"
+"	``Reasonable copying fee'' is whatever you can justify on the basis of"
+"	media cost, duplication charges, time of people involved, and so on. (You"
+"	will not be required to justify it to the Copyright Holder, but only to"
+"	the computing community at large as a market that must bear the fee.)&nbsp;</li>"
+"    </ul>"
+""
+"    <ul>"
+"      <li>"
+"	``Freely Available'' means that no fee is charged for the item itself,"
+"	though there may be fees involved in handling the item. It also means that"
+"	recipients of the item may redistribute it under the same conditions they"
+"	received it.&nbsp;</li>"
+"    </ul>"
+"  </ul>"
+""
+"      <H4>Terms and Conditions of Use</H4>"
+""
+"    <ol>"
+"      <li>"
+"	You may make and give away verbatim copies of the source form of the Standard"
+"	Version of this Package without restriction, provided that you duplicate"
+"	all of the original copyright notices and associated disclaimers and only"
+"	distribute the complete package as a whole.&nbsp;</li>"
+""
+"      <li>"
+"	You may apply bug fixes, portability fixes and other modifications derived"
+"	from the Public Domain or from the Copyright Holder. A Package modified"
+"	in such a way shall still be considered the Standard Version.&nbsp;</li>"
+""
+"      <li>"
+"	You may otherwise modify your copy of this Package in any way, provided"
+"	that you insert a prominent notice in each changed file stating how and"
+"	when you changed that file, and provided that you do at least ONE of the"
+"	following:&nbsp;</li>"
+""
+"    <ol TYPE=\"a\">"
+"      <li>"
+"	place your modifications in the Public Domain or otherwise make them Freely"
+"	Available, such as by posting said modifications to Usenet or an equivalent"
+"	medium, or placing the modifications on a major archive site such as sunsite.unc.edu,"
+"	or by allowing the Copyright Holder to include your modifications in the"
+"	Standard Version of the Package, <i>and</i> rename any non-standard executables"
+"	so the names do not conflict with standard executables, which must also"
+"	be provided, and provide a separate manual page for each non-standard executable"
+"	that clearly documents how it differs from the Standard Version. You must"
+"	<i>not</i>"
+"	make the modified version depend on any other software or libary if that"
+"	software or libary is not Freely Available or if it is covered under a"
+"	license more restrictive than this.&nbsp;</li>"
+""
+"      <li>"
+"	use the modified Package only within your corporation or organization.&nbsp;</li>"
+""
+"      <li>"
+"	make other distribution arrangements with the Copyright Holder.&nbsp;</li>"
+"    </ol>"
+""
+"    <li>"
+"      You may distribute the programs of this Package in object code or executable"
+"      form, provided that you do at least ONE of the following:&nbsp;</li>"
+""
+"    <ol TYPE=\"a\">"
+"      <li>"
+"	distribute a Standard Version of the executables and library files, together"
+"	with instructions (in the manual page or equivalent) on where to get the"
+"	Standard Version.&nbsp;</li>"
+""
+"      <li>"
+"	accompany the distribution with the machine-readable source of the Package"
+"	with your modifications, including the complete machine-readable source"
+"	of the unmodified Standard Version. You must <i>not</i> make the modified"
+"	version depend on any other software or libary if that software or libary"
+"	is not Freely Available or if it is covered under a license more restrictive"
+"	than this.&nbsp;</li>"
+""
+"      <li>"
+"	give non-standard executables non-standard names, and clearly document"
+"	the differences in manual pages (or equivalent), together with instructions"
+"	on where to get the Standard Version.&nbsp;</li>"
+""
+"      <li>"
+"	make other distribution arrangements with the Copyright Holder.&nbsp;</li>"
+"    </ol>"
+""
+"    <li>"
+"      You may charge a reasonable copying fee for any distribution of this Package."
+"      You may charge any fee you choose for support of this Package. You may"
+"      not charge a fee for this Package itself. However, you may distribute this"
+"      Package in aggregate with other (possibly commercial) programs as part"
+"      of a larger (possibly commercial) software distribution provided that you"
+"      do not advertise this Package as a product of your own.&nbsp;</li>"
+""
+"    <li>"
+"      The name of the Copyright Holder may not be used to endorse or promote"
+"      products derived from this software without specific prior written permission."
+"      However, all products derived from this software must reproduce the original"
+"      copyright notice as found in the Standard Version.&nbsp;</li>"
+""
+"    <li>"
+"      THIS PACKAGE IS PROVIDED ``AS IS'' AND WITHOUT ANY EXPRESS OR IMPLIED WARRANTIES,"
+"      INCLUDING, WITHOUT LIMITATION, THE IMPLIED WARRANTIES OF MERCHANTIBILITY"
+"      AND FITNESS FOR A PARTICULAR PURPOSE.&nbsp;</li>"
+"  </ol>"
+"    <center>The End&nbsp;</center>"
+"  </ul>"
