1. fixed Windows compilation (don't declare vars twice inside for loops!) 2. fixed bug in install wizard: it doesn't show import page any more if there    are no importers

--- a/src/gui/license.html
+++ b/src/gui/license.html
@@ -1,10 +1,10 @@
 "<H3>The Mahogany ``Artistic License''</H3>"
 "This is the license under which all original source code developed"
-"for <em>Mahogany</em> is licensed and distributed.<p>"
-"<i>It is not our intend to restrict other developers"
-"in re-using our code and if you feel that you want to do something with"
-"the <em>Mahogany</em> source that this license may not permit, simply "
-"      get in touch with us.</i>"
+" for <em>Mahogany</em> is licensed and distributed."
+"<p><i>It is not our intent to restrict other developers"
+" in re-using our code and if you feel that you want to do something with"
+" the <em>Mahogany</em> source that this license may not permit, simply "
+" get in touch with us.</i>"
 "      <br>"
 "	<H4>Preamble</H4>"
 "    The intent of this document is to state the conditions under which this"
